web-infras/parser/tests/fixtures/esprima/es2018/template-literal-revision/span-not-escape-unicode/output.txt
[SyntaxError]: Invalid hexadecimal escape sequence. (1,5)
1|`${a}\unicode`
 |   ^
